full impl update-log.